[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Roentgen"
version = "0.1.0"
description = "Icon set"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Sergey Vartanov", email = "me@enzet.ru" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "colour~=0.1.5",
    "numpy~=1.25.2",
    "svgpathtools~=1.6.1",
    "svgwrite~=1.4.3",
]

[project.urls]
Homepage = "https://github.com/enzet/Roentgen"

[project.scripts]
roentgen = "roentgen.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["roentgen"]

[tool.hatch.metadata]
allow-direct-references = true
