[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roentgen-icons"
version = "0.12.0"
description = "Set of monochrome 14 × 14 px pixel-aligned map icons"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Sergey Vartanov", email = "me@enzet.ru" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "colour~=0.1.5",
    "lxml~=5.4.0",
    "requests~=2.32.3",
    "svgpathtools~=1.6.1",
    "svgwrite~=1.4.3",
]

[project.optional-dependencies]
dev = ["build~=1.0.0", "pytest~=8.0.0", "ruff~=0.11.12"]

[project.urls]
Homepage = "https://enzet.ru/roentgen"
Repository = "https://github.com/enzet/Roentgen"

[tool.hatch.build.targets.wheel]
only-include = [
    "roentgen/__init__.py",
    "roentgen/icon.py",
    "roentgen/icon_collection.py",
    "roentgen/shapes.json",
    "roentgen/config.json",
]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "C901",    # Too complex functions are allowed.
    "COM812",  # Trailing comma not in Black style.
    "D105",    # Missing docstring in magic method is allowed.
    "D107",    # Missing docstring in `__init__` method is allowed.
    "D202",    # No blank line after function docstring is allowed.
    "D203",    # Blank line is not required before class docstring.
    "D213",    # New line after """ is not needed.
    "FIX002",  # Todo markers are allowed.
    "PLR0911", # Too many return statements are allowed.
    "PLR0912", # Too many branches are allowed.
    "PLR0913", # Too many arguments are allowed.
    "PLR0915", # Too many statements are allowed.
    "RUF001",  # Ambiguous symbols are allowed.
    "RUF002",  # Ambiguous symbols are allowed.
    "S101",    # Asserts are allowed in tests.
    "TD003",   # Issues for todos are not required.
]
line-length = 80
