[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roentgen-icons"
version = "0.9.0"
description = "Set of monochrome 14 × 14 px pixel-aligned map icons"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Sergey Vartanov", email = "me@enzet.ru"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Graphics",
]

[project.urls]
Homepage = "https://enzet.ru/roentgen"

[tool.hatch.build.targets.wheel]
packages = ["roentgen"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"
